// Licensed to the Apache Software Foundation (ASF) under one
// or more contributor license agreements.  See the NOTICE file
// distributed with this work for additional information
// regarding copyright ownership.  The ASF licenses this file
// to you under the Apache License, Version 2.0 (the
// "License"); you may not use this file except in compliance
// with the License.  You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing,
// software distributed under the License is distributed on an
// "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
// KIND, either express or implied.  See the License for the
// specific language governing permissions and limitations
// under the License.

//=============================================================================
// Plugins
//=============================================================================
plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
    id 'com.google.protobuf' version '0.9.4'
}
apply plugin: 'checkstyle'
apply plugin: 'com.google.protobuf'

//=============================================================================
// Project Level Settings
//=============================================================================
version = 0.1
java {
    // Compile and target JDK 17 bytecode
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}
def title = 'Apache Wave PST Compiler'
def vendor = 'The Apache Software Foundation'

jar {
    manifest {
        attributes "Specification-Vendor": vendor,
                "Specification-Title": title,
                "Specification-Version": version,
                "Implementation-Vendor": vendor,
                "Implementation-Title": title,
                "Implementation-Version": version,
                "Built-By": "No one in particular",
                "Main-Class": "org.apache.wave.pst.PstMain"
    }
}

tasks.withType(Tar) {
    compression = Compression.BZIP2
}

tasks.withType(ProcessResources) {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

//=============================================================================
// Source's
//=============================================================================
sourceSets {
    main {
        java {
            srcDirs = [
                    'src/main/java',
                    'generated/main/java'
            ]
        }
        proto {
            srcDir 'src/main/proto'
        }
    }

    test {
        java {
            srcDir 'src/test/java'
        }
    }
}

// Ensure generated proto sources are available before compiling Java
compileJava.dependsOn generateProto

//=============================================================================
// Dependencies
// Note: next to each dependency is a review stamp [last review, next review].
//       If a dependency is past its review date pls create a jira issue.
//       https://issues.apache.org/jira/browse/WAVE
//=============================================================================
repositories {
    mavenCentral()
}

dependencies {
implementation group: 'com.google.protobuf', name: 'protobuf-java', version: '3.25.3'
    implementation group: 'com.google.guava', name: 'guava', version: '19.0'             // [1/2016, 6/2016]
    implementation group: 'org.antlr', name: 'antlr', version: '3.2'                     // [12/2015, 3/2016]
    implementation group: 'commons-cli', name: 'commons-cli', version: '1.11.0'          // [2026-03, 2026-09]

    testImplementation group: 'junit', name: 'junit', version: '4.12'                    // [1/2016, 1/2017]
}

//=============================================================================
// CheckStyle Config
//=============================================================================
checkstyle {
    toolVersion = "7.6.1"
    configFile = file("/google_checks.xml")
}

checkstyleMain.source = "src/main/java" // only checks the manually written java

//=============================================================================
// Protobuf Config
//=============================================================================
protobuf {
    protoc {
        artifact = 'com.google.protobuf:protoc:3.25.3'
    }
    generatedFilesBaseDir = "$projectDir/generated"
}

//=============================================================================
// UberJar (shadowJar) config
//=============================================================================

shadowJar {
    archiveBaseName = 'wave-pst'
    archiveClassifier = ''
    exclude 'META-INF/**/*'
    // Use project-provided protobuf runtime from the consumer; avoid embedding it here to prevent conflicts
    exclude 'com/google/protobuf/**'
    // Avoid bundling Guava; rely on consumer's version to prevent conflicts
    exclude 'com/google/common/**'
}

//=============================================================================
// Clean - Must remove generated sources.
//=============================================================================
clean {
    delete "generated/"
}

//=============================================================================
// Source Distribution
//=============================================================================

def srcName = this.group + "-" + this.name + "-src"
def srcExcludes = [
        'build/*',
        '*.iml'
]

task createDistSourceTar(type: Tar) {
    archiveBaseName = srcName
    destinationDirectory = file('../distributions')
    from('./') {
        into 'apache-wave-pst-src'
    }
    excludes = srcExcludes

}

task createDistSourceZip(type: Zip) {
    archiveBaseName = srcName
    destinationDirectory = file('../distributions')
    from('./') {
        into 'apache-wave-pst-src'
    }
    excludes = srcExcludes
}

task createDistSource() {
    doFirst {
        println ''
        println '--------------------------------------------------------'
        println '     Creating Deployment Source - Apache Wave PST       '
        println '--------------------------------------------------------'
        println ''
    }
}

createDistSource.dependsOn createDistSourceTar, createDistSourceZip

//=============================================================================
// Binary Distribution
//=============================================================================

def binName = this.group + "-" + this.name + "-bin"

task createDistBinTar(type: Tar) {
    archiveBaseName = binName
    destinationDirectory = file('../distributions')
    from(shadowJar) {
        into 'apache-wave-pst/bin'
    }
    from('src/dist') {
        into 'apache-wave-pst'
    }
}

task createDistBinZip(type: Zip) {
    archiveBaseName = binName
    destinationDirectory = file('../distributions')
    from(shadowJar) {
        into 'apache-wave-pst/bin'
    }
    from('src/dist') {
        into 'apache-wave-pst'
    }
}

task createDistBin() {
    doFirst {
        println ''
        println '--------------------------------------------------------'
        println '     Creating Deployment Binary - Apache Wave PST       '
        println '--------------------------------------------------------'
        println ''
    }
}

createDistBin.dependsOn createDistBinTar, createDistBinZip

//=============================================================================
// Distribution's
//=============================================================================

task createDist() {
    doFirst {
        println ''
        println '--------------------------------------------------------'
        println '      Creating Deployments - Apache Wave PST            '
        println '--------------------------------------------------------'
        println ''
    }
}

createDist.dependsOn createDistSource, createDistBin
